Update PDF Quiz Generator.html

--- a/PDF Quiz Generator.html
+++ b/PDF Quiz Generator.html
@@ -58,7 +58,8 @@
             });
           }
         }
-        
+    </script>
+    <script>
 
 // Function to display the quiz questions on the website
 function displayQuizQuestions(quizQuestions) {
