Update PDF Quiz Generator.html

--- a/PDF Quiz Generator.html
+++ b/PDF Quiz Generator.html
@@ -126,6 +126,7 @@ function displayQuizQuestions(quizQuestions) {
     });
   });
 }
+ displayQuizQuestions(quizQuestions);
     </script>
   </body>
 </html>
