--- a/PDF Quiz Generator.html
+++ b/PDF Quiz Generator.html
@@ -31,7 +31,9 @@
           });
         });
       });
-
+ // Load the English model for spaCy
+  const spacy = await spacy.load("en_core_web_sm");
+      
  // Function to determine if a sentence is a question
 async function isQuestion(sentence) {
   // Load the English model for spaCy
@@ -43,10 +45,20 @@ async function isQuestion(sentence) {
   // Check if the sentence is a question by checking its dependency parse
   return doc.sents[0].root.dep_ === "ROOT" && doc.sents[0].root.head.dep_ === "punct" && doc.sents[0].root.head.text === "?";
 }  
+      // Function to extract the question from a line of text
+function extractQuestion(line) {
+  // Split the line into words
+  const words = line.split(" ");
+  
+  // The question is everything after the first word
+  const question = words.slice(1).join(" ");
+  
+  return question;
+}
+
       // Function to extract the options from a sentence
 async function extractOptions(sentence) {
-  // Load the English model for spaCy
-  const spacy = await spacy.load("en_core_web_sm");
+ 
 
   // Parse the sentence using spaCy
   const doc = spacy(sentence.text);
@@ -68,8 +80,6 @@ async function extractOptions(sentence) {
 }
 // Function to generate quiz questions from the text
 async function generateQuizQuestions(text) {
-  // Load the English model for spaCy
-  const spacy = await spacy.load("en_core_web_sm");
 
   // Parse the text using spaCy
   const doc = spacy(text);
