--- a/PDF Quiz Generator.html
+++ b/PDF Quiz Generator.html
@@ -97,9 +97,10 @@ async function generateQuizQuestions(text) {
         question: question,
         options: options
       });
-      displayQuizQuestions(quizQuestions);
     }
   }
+    // Call the displayQuizQuestions function and pass it the quizQuestions array
+  displayQuizQuestions(quizQuestions);
 }
       
 // Function to display the quiz questions on the website
